# countdowndays

./: mo.key  mo.key.pub  package-lock.json  package.json  t.txt  vite.config.ts
.github/workflows/: build.yml
scripts/: sync-version.js
src/: App.css  App.tsx
src-tauri/: .env  2  Cargo.toml  countdown.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260221144728_create_events_table.sql  20260221165809_init_tables.sql  20260222142604_add_table.sql  20260222142705_add_event_type.sql  20260222145510_fix_importance_to_real.sql  20260224151108_createtime.sql  20260224172753_createtime.sql
src-tauri/src/: commands.rs  db.rs  errors.rs  lib.rs  main.rs  modals.rs  models.rs  notification.rs  repositories.rs
src-tauri/src/boot/: mod.rs  setup.rs  tray.rs  window.rs
src/components/: AddEventModal.tsx  CommandPalette.tsx  CustomSlider.tsx  EventCard.tsx  EventList.tsx  FabWidget.tsx  FloatingButton.tsx  GlobalModals.tsx  Header.tsx  ThemeToggle.tsx  TrayMenu.tsx  UpdateModal.tsx  UserMenu.tsx
src/hooks/: useAppBoot.ts  usePlatform.ts
src/services/: api.ts
src/store/: eventStore.ts  eventStore.tsx  uiBus.ts
src/types/: index.ts
src/utils/: dateUtils.ts  textUtils.tsx
