[package]
name = "countdown_day"
version = "1.1.13"
description = "A Tauri App"
authors = ["yuna"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "countdown_day_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx= {version = "0.8.6", features= ["sqlite", "macros", "chrono", "runtime-tokio"] }
tokio= {version = "1.49.0", features= ["full"] }
chrono = {version="0.4.43", features= ["serde"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
regex = "1.12.3"
dotenv = "0.15.0"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6.3"

